@@ -4,6 +4,7 @@
 - Implemented issue #13383: Add a method to extract/change/replace entities in
   HTML mail with the CID elements replaced.
 - Implemented feature request #13539: Add new mail parser option fileClass.
+- Fixed issue #13878: Endless loop in ezcMailParser.
 
 
 1.5.2 - Monday 06 October 2008
